--- a/vue-chat/package.json
+++ b/vue-chat/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.14.6",
     "poppers": "^0.1.2",
     "vue": "^2.5.17",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
